--- a/ejrecicio1/style.css
+++ b/ejrecicio1/style.css
@@ -5,8 +5,7 @@ html,body{
 }
 
 .container{
-    display: flex;
-    justify-content: center;
+    margin: 200px auto;
 }
 
 .card{
@@ -16,6 +15,7 @@ html,body{
     flex-direction: row;
 
     margin-top: 100px;
+    margin: 0px auto;
 
     width: 600px;
     height: 450px;
@@ -126,6 +126,11 @@ p{
 }
 
 @media screen and (max-width: 400px) {
+
+    .container{
+        margin: 50px 10px;
+    }
+    
     .card{
         flex-direction: column;
     
